--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Mithil Datta</h1>
-							<p>Standard Deal, CEO</p>
+							<p>Standard Deal</p>
 						</header>
 						
 						<footer>
