--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<footer>
 							<ul class="icons">
 								<!--<li><a href="#" class="fa-twitter">Twitter</a></li>-->
-								<li><a href="https://standarddeal.wordpress.com/contact/" class="fa fa-envelope-square">Contact</a></li>
+								<li><a href="https://standarddeal.wordpress.com/contact/" class="fa fa-envelope-square" target="_blank">Contact</a></li>
 								<!--<li><a href="#" class="fa-facebook">Facebook</a></li>-->
 							</ul>
 						</footer>
@@ -64,7 +64,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>Made with ❤ by <a href="https://thecoducer.github.io/" target="_blank">The Coducer</a></li>
+							<li><b>Made with ❤ by <a href="https://thecoducer.github.io/" target="_blank">The Coducer</b></a></li>
 						</ul>
 					</footer>
 
