--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<footer>
 							<ul class="icons">
 								<!--<li><a href="#" class="fa-twitter">Twitter</a></li>-->
-								<li><a href="https://standarddeal.wordpress.com/contact/" class="fa fa-envelope-square" target="_blank">Contact</a></li>
+								<li><a href="https://goo.gl/mNIGv5" class="fa fa-envelope-square" target="_blank">Contact</a></li>
 								<!--<li><a href="#" class="fa-facebook">Facebook</a></li>-->
 							</ul>
 						</footer>
