google meta tag added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="keywords" content="Mithil Datta, mithildatta, Jute, Cotton, Fabric, jute and cotton fabric contact, jute cotton in kolkata, Standard Deal, kolkata, howrah, standarddeal, CEO, business in chittaranjan avenue">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="google-site-verification" content="Q5uSdC_zlbTmnAOvimmmlBwRo_sQDXosgsx3wB3-0dU" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
