--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mithil Datta</title>
+		<title>Mithil Datta - Standard Deal</title>
 		<meta charset="utf-8" />
-		<meta name="keywords" content="Mithil Datta, mithildatta, Jute, Cotton, Fabric, jute and cotton fabric contact, jute cotton in kolkata, Standard Deal, kolkata, howrah, standarddeal, CEO, business in chittaranjan avenue">
+		<meta name="keywords" content="standarddeal, standard deal, mithildatta, Jute, Cotton, Fabric, jute and cotton fabric contact, jute cotton in kolkata, kolkata, howrah, CEO, business in chittaranjan avenue">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<meta name="google-site-verification" content="Q5uSdC_zlbTmnAOvimmmlBwRo_sQDXosgsx3wB3-0dU" />
