--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 		<meta name="google-site-verification" content="Q5uSdC_zlbTmnAOvimmmlBwRo_sQDXosgsx3wB3-0dU" />
 		
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet" href="assets/css/ionicons.css">
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
 		<script type="text/javascript">
 		if (document.layers) {
 			//Capture the MouseDown event.
@@ -70,7 +71,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li><b>Made with ❤ by <a href="https://thecoducer.github.io/" target="_blank">The Coducer</b></a></li>
+							<li><b><i class="icon ion-chevron-left"></i><i class="icon ion-chevron-right"></i> with <i class="icon ion-heart"></i> by <a href="https://thecoducer.github.io/" target="_blank">The Coducer</b></a></li>
 						</ul>
 					</footer>
 
