--- a/index.html
+++ b/index.html
@@ -58,6 +58,24 @@
 							<h1>Mithil Datta</h1>
 							<p>Standard Deal</p>
 						</header>
+						<hr />
+						<h2>Contact</h2>
+						<form method="post" action="https://formspree.io/sdeal6257@gmail.com">
+							<div class="field">
+								<input type="text" name="name" id="name" placeholder="Name" />
+							</div>
+							<div class="field">
+								<input type="email" name="email" id="email" placeholder="Email" />
+							</div>
+							<div class="field">
+								<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
+							</div>
+							<ul class="actions">
+                     			<li><button class="button">SUBMIT</button></li>
+							</ul>
+						</form>
+						<hr />
+						
 						
 						<footer>
 							<ul class="icons">
