--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Mithil Datta - Standard Deal</title>
 		<meta charset="utf-8" />
-		<meta name="keywords" content="standarddeal, standard deal, mithildatta, Jute, Cotton, Fabric, jute and cotton fabric contact, jute cotton in kolkata, kolkata, howrah, CEO, business in chittaranjan avenue">
+		<meta name="keywords" content="standard deal, mithil datta, Jute, Cotton, Fabric, jute and cotton fabric contact, jute cotton in kolkata, kolkata, howrah, CEO, business in chittaranjan avenue">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<meta name="google-site-verification" content="Q5uSdC_zlbTmnAOvimmmlBwRo_sQDXosgsx3wB3-0dU" />
@@ -54,10 +54,11 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/avatar.jpg" alt="mithil datta" /></span>
 							<h1>Mithil Datta</h1>
 							<p>Standard Deal</p>
 						</header>
+						<!--
 						<hr />
 						<h2>Contact</h2>
 						<form method="post" action="https://formspree.io/sdeal6257@gmail.com">
@@ -75,15 +76,19 @@
 							</ul>
 						</form>
 						<hr />
+						-->
 						
-						
-						<footer>
+						<ul class="actions">
+								<li><a href="https://goo.gl/X3HaEm" class="button" target="blank">Our Products</a></li>
+							</ul>
+
+						<!--<footer>
 							<ul class="icons">
 								<!--<li><a href="#" class="fa-twitter">Twitter</a></li>-->
-								<li><a href="https://goo.gl/mNIGv5" class="fa fa-envelope-square" target="_blank">Contact</a></li>
+								<!--<li><a href="https://goo.gl/mNIGv5" class="fa fa-envelope-square" target="_blank">Contact</a></li>
 								<!--<li><a href="#" class="fa-facebook">Facebook</a></li>-->
-							</ul>
-						</footer>
+							<!--</ul>
+						</footer>-->
 					</section>
 
 				<!-- Footer -->
