--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="mithil datta" /></span>
+							<a href="https://standarddeal.wordpress.com/" target="blank"><span class="avatar"><img src="images/avatar.jpg" alt="mithil datta" /></span></a>
 							<h1>Mithil Datta</h1>
 							<p>Standard Deal</p>
 						</header>
